# src/main/app/dto/article_tag.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateArticleTagRequest struct {
+	ArticleId int64 `json:"article_id"`
+	TagId     int64 `json:"tag_id"`
+}
